--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SignUpForm</string>
+    <string name="greeting">Welcome to the Sign Up Form!</string>
 </resources>
